kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-terraform-example-deployment
  labels:
    app: eks-terraform-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eks-terraform-example
  template:
    metadata:
      labels:
        app: eks-terraform-example
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
