kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: eks-terraform-example-service
spec:
  selector:
    app: eks-terraform-example
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
